--- a/app/src/bulma-fix.scss
+++ b/app/src/bulma-fix.scss
@@ -31,7 +31,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin-right: 10px;   
 }
 
 // Fix: navbar-menu height does not equal navbar
